plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.0-M2'
    id 'io.spring.dependency-management' version '1.1.3'
    id 'org.graalvm.buildtools.native' version '0.9.24'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'


graalvmNative {
    binaries {
        main {
            buildArgs.add('--enable-preview')
        }
    }
}


java {
    sourceCompatibility = '21'

    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}


repositories {
    mavenCentral()
    maven { url 'https://repo.spring.io/milestone' }
}

dependencies {
//    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
//    runtimeOnly 'org.postgresql:postgresql'
//    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
    testImplementation 'org.testcontainers:junit-jupiter'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    implementation 'org.springframework.boot:spring-boot-starter-json'
//    developmentOnly 'org.springframework.boot:spring-boot-devtools'
//    testImplementation 'org.testcontainers:postgresql'
}

tasks.named('test') {
    useJUnitPlatform()
}
